force-app/main/default/objects/Case/fields/Case_Summary__c.field-meta.xml
<CustomField>
    <fullName>Case_Summary__c</fullName>
    <label>Case Summary</label>
    <type>TextArea</type>
</CustomField>