force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>AC Cooling - Common Area</fullName>
            </value>
            <value>
                <fullName>AC Cooling - Inside Units</fullName>
            </value>
            <value>
                <fullName>Alterations</fullName>
            </value>
            <value>
                <fullName>Amenity Reservations</fullName>
            </value>
            <value>
                <fullName>Appliances</fullName>
            </value>
            <value>
                <fullName>Blockage</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Booking Form</fullName>
            </value>
            <value>
                <fullName>Booking related</fullName>
            </value>
            <value>
                <fullName>Broken Glass</fullName>
            </value>
            <value>
                <fullName>Building Information</fullName>
            </value>
            <value>
                <fullName>Call Back Request</fullName>
            </value>
            <value>
                <fullName>Channel Relations</fullName>
            </value>
            <value>
                <fullName>Cheque Bounce</fullName>
            </value>
            <value>
                <fullName>Cheque Deposit/Realization</fullName>
            </value>
            <value>
                <fullName>Chilled Water Charges</fullName>
            </value>
            <value>
                <fullName>Chilled Water Charges/Coolings</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Civil Works</fullName>
            </value>
            <value>
                <fullName>Collections/ Payments</fullName>
            </value>
            <value>
                <fullName>Common Area Doors</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Community Access Cards</fullName>
            </value>
            <value>
                <fullName>Community Amenities Access</fullName>
            </value>
            <value>
                <fullName>Community Developments</fullName>
            </value>
            <value>
                <fullName>Community Improvements</fullName>
            </value>
            <value>
                <fullName>Community Rules Violation</fullName>
            </value>
            <value>
                <fullName>Community Service Fees</fullName>
            </value>
            <value>
                <fullName>Community Staff Behavior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>