force-app/main/default/objects/Case/fields/Date_Time_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Opened__c</fullName>
    <label>Case Opened On</label>
    <type>DateTime</type>
</CustomField>