force-app/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Community Management</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>DLP</fullName>
                <label>CCC</label>
            </value>
            <value>
                <fullName>DLD</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>SPAM</fullName>
            </value>
            <value>
                <fullName>TEST</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Unregistered Email Id</fullName>
            </value>
            <value>
                <fullName>Channel Relations</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
                <isActive>false</isActive>
                <label>Accounts</label>
            </value>
            <value>
                <fullName>Audit</fullName>
                <isActive>false</isActive>
                <label>Audit</label>
            </value>
            <value>
                <fullName>Finalized SCM</fullName>
                <isActive>false</isActive>
                <label>Finalized SCM</label>
            </value>
            <value>
                <fullName>Handover</fullName>
                <isActive>false</isActive>
                <label>Handover</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>