force-app/main/default/objects/Case/fields/Escalation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Date_Time__c</fullName>
    <formula>IF(
    (ISPICKVAL(Status, &apos;Open&apos;) || ISPICKVAL(Status, &apos;New&apos;)) &amp;&amp; NOT(ISBLANK(Date_Time_Opened__c)),
    Date_Time_Opened__c + 
        CASE(WEEKDAY(DATEVALUE(Date_Time_Opened__c)),
            6, 3,
            7, 3,
												1, 2,
            1
        )
    ,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation Date/Time</label>
    <type>DateTime</type>
</CustomField>