force-app/main/default/objects/Case/fields/is_QMS_Case__c.field-meta.xml
<CustomField>
    <fullName>is_QMS_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is QMS Case</label>
    <type>Checkbox</type>
</CustomField>