force-app/main/default/objects/Case/fields/PropStrength__Application_Booking__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Application_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select Application / Booking to which this case is related.</inlineHelpText>
    <label>Application / Booking</label>
    <referenceTo>PropStrength__Application_Booking__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>