force-app/main/default/objects/Case/fields/PropStrength__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>