force-app/main/default/objects/Case/fields/PropStrength__Re_Opened_Case__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Re_Opened_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Opened Case</label>
    <type>Checkbox</type>
</CustomField>