force-app/main/default/objects/Case/fields/PropStrength__State__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>