force-app/main/default/objects/Case/fields/PropStrength__TempOwnerId__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__TempOwnerId__c</fullName>
    <label>TempOwnerId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>