force-app/main/default/objects/Case/fields/Re_Opened_Ageing__c.field-meta.xml
<CustomField>
    <fullName>Re_Opened_Ageing__c</fullName>
    <formula>ABS(Re_Opened_Timestamp__c  - ClosedDate)</formula>
    <label>Re-Opened Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>