force-app/main/default/objects/Case/fields/RM_Remarks__c.field-meta.xml
<CustomField>
    <fullName>RM_Remarks__c</fullName>
    <label>RM Remarks</label>
    <type>TextArea</type>
</CustomField>