force-app/main/default/objects/Case/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <label>ServiceName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>