force-app/main/default/objects/Case/fields/Serving_Time__c.field-meta.xml
<CustomField>
    <fullName>Serving_Time__c</fullName>
    <label>Serving Time</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>