force-app/main/default/objects/Case/fields/test_delete_later__c.field-meta.xml
<CustomField>
    <fullName>test_delete_later__c</fullName>
    <formula>CASE(MOD( DATEVALUE(Re_Opened_Timestamp__c ) - DATE(1985,6,24),7), 

  0 , CASE( MOD( TODAY() - DATEVALUE(Re_Opened_Timestamp__c ) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 

  1 , CASE( MOD( TODAY() - DATEVALUE(Re_Opened_Timestamp__c ) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 

  2 , CASE( MOD( TODAY() - DATEVALUE(Re_Opened_Timestamp__c ) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 

  3 , CASE( MOD( TODAY() - DATEVALUE(Re_Opened_Timestamp__c ) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 

  4 , CASE( MOD( TODAY() - DATEVALUE(Re_Opened_Timestamp__c ) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 

  5 , CASE( MOD( TODAY() - DATEVALUE(Re_Opened_Timestamp__c ) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 

  6 , CASE( MOD( TODAY() - DATEVALUE(Re_Opened_Timestamp__c ) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 

  999) 

  + 

  (FLOOR(( TODAY() - DATEVALUE(Re_Opened_Timestamp__c ) )/7)*5)</formula>
    <label>test delete later</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>