force-app/main/default/objects/Case/fields/Token_called_by__c.field-meta.xml
<CustomField>
    <fullName>Token_called_by__c</fullName>
    <label>Token called by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>