force-app/main/default/objects/Case/fields/TokenNumber__c.field-meta.xml
<CustomField>
    <fullName>TokenNumber__c</fullName>
    <label>TokenNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>