force-app/main/default/objects/Case/recordTypes/Channel_Partner.recordType-meta.xml
<RecordType>
    <fullName>Channel_Partner</fullName>
    <active>true</active>
    <businessProcess>Channel Partner</businessProcess>
    <label>Channel Partner</label>
</RecordType>