force-app/main/default/objects/Case/recordTypes/Collection.recordType-meta.xml
<RecordType>
    <fullName>Collection</fullName>
    <active>true</active>
    <businessProcess>Collection Support Process</businessProcess>
    <label>Collection</label>
</RecordType>