force-app/main/default/objects/Case/recordTypes/CRM.recordType-meta.xml
<RecordType>
    <fullName>CRM</fullName>
    <active>true</active>
    <businessProcess>CRM Support Process</businessProcess>
    <label>CRM</label>
</RecordType>