force-app/main/default/objects/Case/recordTypes/Siniya_Collection.recordType-meta.xml
<RecordType>
    <fullName>Siniya_Collection</fullName>
    <active>true</active>
    <businessProcess>Siniya Collection Support Process</businessProcess>
    <label>Siniya Collection</label>
</RecordType>