force-app/main/default/objects/Case/recordTypes/Siniya_Customer_Care.recordType-meta.xml
<RecordType>
    <fullName>Siniya_Customer_Care</fullName>
    <active>true</active>
    <businessProcess>Customer Care Support</businessProcess>
    <label>Siniya Customer Care</label>
</RecordType>