force-app/main/default/objects/Case/recordTypes/Sobha_Ccommunity_Management.recordType-meta.xml
<RecordType>
    <fullName>Sobha_Ccommunity_Management</fullName>
    <active>true</active>
    <businessProcess>Communities Management Support Process</businessProcess>
    <label>Sobha Community Management</label>
</RecordType>