force-app/main/default/objects/Case/listViews/All_Closed_Cases_Farhan.listView-meta.xml
<ListView>
    <fullName>All_Closed_Cases_Farhan</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed,Escalation – TAT</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>Ummer Farhan,Usman Sheikh,Vivek Sharma,Racha Dannaoui,Khawla Hattab</value>
    </filters>
    <label>All Closed Cases Farhan</label>
    <sharedTo>
        <group>CRM_Farhan</group>
    </sharedTo>
</ListView>