force-app/main/default/objects/Case/listViews/All_Closed_Cases_Laila.listView-meta.xml
<ListView>
    <fullName>All_Closed_Cases_Laila</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>Laila Nadeer,Aswathi Remesh Kumar,Ahmed Yossry,Hadi osama hussain mohamed ghanem,Juma Khalfan,Pratyush Kumar Nayak</value>
    </filters>
    <label>All Closed Cases Laila</label>
    <sharedTo>
        <group>CRM_Laila</group>
        <group>CRM_Roopa</group>
    </sharedTo>
</ListView>