force-app/main/default/objects/Case/listViews/All_Closed_Cases_Malak.listView-meta.xml
<ListView>
    <fullName>All_Closed_Cases_Malak</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed,Escalation – TAT</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>Davood Sheikh,Yugeshkumar Sureshkumar,Malak Saleh,Qing Yu,Mekdes Belayneh Petros</value>
    </filters>
    <label>All Closed Cases Malak</label>
    <sharedTo>
        <group>CRM_Malak</group>
        <group>CRM_Roopa</group>
    </sharedTo>
</ListView>