force-app/main/default/objects/Case/listViews/All_Closed_Cases_Sahar.listView-meta.xml
<ListView>
    <fullName>All_Closed_Cases_Sahar</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed,Escalation – TAT</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>Sahar Sultan,Abdelrahman Al-Ali,Abdeldjalil Kamel Bensenada,Nahed Hachani,Ruvaid Wani,Araba Jehad,Mariia Aleksandrovskaia</value>
    </filters>
    <label>All Closed Cases Sahar</label>
    <sharedTo>
        <group>CRM_Farhan</group>
        <group>CRM_Sahar</group>
    </sharedTo>
</ListView>