force-app/main/default/objects/Case/listViews/All_Closed_Contact_Center_User_Queue.listView-meta.xml
<ListView>
    <fullName>All_Closed_Contact_Center_User_Queue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>Deann,Daivik,Syeda,Reuben,Elaine,Maithah,Myrat,Hussein,Mahmoud,Farah,Anju,Easakh,Anusree,Afroz,Jagadish,Kranthi,Uday,Mahesh,Asif,Pooja,Purna,Santosh,Sachin,Thirupathi,Vallapudas</value>
    </filters>
    <filters>
        <field>is_QMS_Case__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Closed Contact Center User Queue</label>
    <sharedTo>
        <group>Contact_Center_User_Queue</group>
    </sharedTo>
</ListView>