force-app/main/default/objects/Case/listViews/All_Closed_Sobha_Siniya_Cases.listView-meta.xml
<ListView>
    <fullName>All_Closed_Sobha_Siniya_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Siniya_Customer_Care</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed,Escalation – TAT</value>
    </filters>
    <label>All Closed Sobha Siniya Cases</label>
    <sharedTo>
        <group>Sobha_Siniya_Group</group>
    </sharedTo>
</ListView>