force-app/main/default/objects/Case/listViews/All_Collection_Main_Queue.listView-meta.xml
<ListView>
    <fullName>All_Collection_Main_Queue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Open,In Progress,Closed,Escalation – TAT,Re-Opened</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>Collection Main Queue,aatia,apati,akaso,ashai,aabdu,amyas,ashar,aedat,amehr,bgeor,cqa t,Divya,ishai,Karan,kshar,mshet,mkall,mayar,npand,aran,rxion,rkila,rnair,rsalv,ssham,ssira,coll,sbegm,szaki,dso,Stell,skhan,tbash,urva,zhaid,Zoya</value>
    </filters>
    <label>All Collection Main Queue</label>
    <sharedTo>
        <group>Collection_Main_Queue_Cases</group>
    </sharedTo>
</ListView>