force-app/main/default/objects/Case/listViews/All_Customer_Care_Close_Cases.listView-meta.xml
<ListView>
    <fullName>All_Customer_Care_Close_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed,Escalation – TAT</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>Sanjana,Lakshmi Nair,Angela,Mansur</value>
    </filters>
    <filters>
        <field>is_QMS_Case__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Customer Care Close Cases</label>
    <sharedTo>
        <group>Customer_Care_Group</group>
    </sharedTo>
</ListView>